# computation_manager

./: CMakeLists.txt  README.md  computation_manager.cpp  computation_manager.h  group.cpp  group.h  main.cpp  shared.h  task.cpp  task.h  ui.cpp  ui.h  worker.cpp  worker.h
